--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-arrow = { version = "32", optional = true }
+arrow = { version = "34", optional = true }
 async-trait = "0.1"
 bytes = "1"
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
@@ -29,7 +29,7 @@ num-traits = "0.2.15"
 object_store = "0.5.3"
 once_cell = "1.16.0"
 parking_lot = "0.12"
-parquet = { version = "32", features = [
+parquet = { version = "34", features = [
     "async",
     "object_store",
 ], optional = true }
@@ -53,7 +53,7 @@ rusoto_dynamodb = { version = "0.47", default-features = false, optional = true 
 rusoto_glue = { version = "0.47", default-features = false, optional = true }
 
 # Datafusion
-datafusion = { version = "18", optional = true }
+datafusion = { git="https://github.com/krlohnes/arrow-datafusion.git", brain="main", optional = true }
 datafusion-expr = { version = "18", optional = true }
 datafusion-common = { version = "18", optional = true }
 datafusion-proto = { version = "18", optional = true }
